--- a/CoolParking/CoolParking.WebAPI.ClientHttp/CoolParking.WebAPI.ClientHttp.csproj
+++ b/CoolParking/CoolParking.WebAPI.ClientHttp/CoolParking.WebAPI.ClientHttp.csproj
@@ -1,11 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="5.0.6" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
