--- a/CoolParking/CoolParking/CoolParking.csproj
+++ b/CoolParking/CoolParking/CoolParking.csproj
@@ -6,6 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Razor.Language" Version="5.0.6" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CoolParking.BL.Tests\CoolParking.BL.Tests.csproj" />
     <ProjectReference Include="..\CoolParking.BL\CoolParking.BL.csproj" />
   </ItemGroup>
